--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -33,7 +33,7 @@ jobs:
           echo "REPOBASE=$REPOBASE" >> $GITHUB_ENV
           echo "IMAGETAG=$IMAGETAG" >> $GITHUB_ENV
           echo "IMAGENAME=$IMAGENAME" >> $GITHUB_ENV
-          podman build -t ${IMAGENAME}:${IMAGETAG} .
+          podman build --format docker -t ${IMAGENAME}:${IMAGETAG} .
       - id: publish
         run: |
           # Publish the branch
